[package]
name = "pittore"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14"
euclid = "0.22.9"
log = "0.4.20"
# lyon = "*"
# Same as the winit version
raw-window-handle = "0.5"
thiserror = "1"
winit = "0.28.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
] }
